@@ -1,8 +1,8 @@
 ## texk/dvipdfm-x/ac/withenable.ac: configure.ac fragment for the TeX Live subdirectory texk/dvipdfm-x/
 dnl
-dnl Copyright (C) 2009-2013 Peter Breitenlohner <tex-live@tug.org>
+dnl Copyright (C) 2009-2014 Peter Breitenlohner <tex-live@tug.org>
 dnl You may freely use, modify and/or distribute this file.
 dnl
 ## configure options and TL libraries required for dvipdfm-x
-KPSE_ENABLE_PROG([dvipdfm-x], [kpathsea libpng paper])
+KPSE_ENABLE_PROG([dvipdfm-x], [kpathsea libpng libpaper])
 m4_include(kpse_TL[texk/dvipdfm-x/ac/dvipdfm-x.ac])
